infra/k8s/comment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: kiavashkzm/comment
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: '0.2'
---
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  type: ClusterIP
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 4002
      targetPort: 4002
