infra/k8s/post-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: post
          image: kiavashkzm/post
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: '0.2'
---
apiVersion: v1
kind: Service
metadata:
  name: post-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 4001
      targetPort: 4001
