infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type: NodePort
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 4001
      targetPort: 4001
