infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: ingress-srv
spec:
  rules:
  - host: post.com
    http:
      paths:
        - path: /posts/create
          pathType: Prefix
          backend:
            service:
              name: post-clusterip-srv
              port:
                number: 4001
        - path: /posts
          pathType: Prefix
          backend:
            service:
              name: query-srv
              port:
                number: 4003
        - path: /posts/?(.*)/comments
          pathType: Prefix
          backend:
            service:
              name: comment-srv
              port:
                number: 4002
